; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_NextVideoFrame.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_NextVideoFrame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_player_input = type { i32 }

@INPUT_CONTROL_SET_FRAME_NEXT = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"Next frame\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_player_NextVideoFrame(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.vlc_player_input*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call %struct.vlc_player_input* @vlc_player_get_input_locked(i32* %5)
  store %struct.vlc_player_input* %6, %struct.vlc_player_input** %3, align 8
  %7 = load %struct.vlc_player_input*, %struct.vlc_player_input** %3, align 8
  %8 = icmp ne %struct.vlc_player_input* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %23

10:                                               ; preds = %1
  %11 = load %struct.vlc_player_input*, %struct.vlc_player_input** %3, align 8
  %12 = getelementptr inbounds %struct.vlc_player_input, %struct.vlc_player_input* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @INPUT_CONTROL_SET_FRAME_NEXT, align 4
  %15 = call i32 @input_ControlPushHelper(i32 %13, i32 %14, i32* null)
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @VLC_SUCCESS, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %10
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @_(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %22 = call i32 @vlc_player_osd_Message(i32* %20, i32 %21)
  br label %23

23:                                               ; preds = %9, %19, %10
  ret void
}

declare dso_local %struct.vlc_player_input* @vlc_player_get_input_locked(i32*) #1

declare dso_local i32 @input_ControlPushHelper(i32, i32, i32*) #1

declare dso_local i32 @vlc_player_osd_Message(i32*, i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
